--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
                     &amp;
                     <a href="http://www.adobe.com/special/misc/privacy.html" target="_system">Privacy</a>
                     <div id="version">
-                        %PHONEGAP_APP_VERSION%
+                        <!-- %PHONEGAP_APP_VERSION_START% -->BQUA6C6F45.com.dialogtech.tdupree.phonegap : 1.8.4<!-- %PHONEGAP_APP_VERSION_END% -->
                     </div>
                 </div>
             </article>
